Fix a bad style in CodeMirror.
We had a weird, single style rule for `.cm-header` that just specified
the color as "black". This made markdown header lines (such as those
starting with `#`) very hard to read when running in dark mode.

This change gets rid of that.

Testing Done:
Edited a change description that had header lines and was able to read
the text.

Reviewed at https://reviews.reviewboard.org/r/14669/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -128,10 +128,6 @@
     padding: 0;
   }
 
-  .cm-header {
-    color: black;
-  }
-
   /**
    * Highlight Markdown string literals and wrap it in a box.
    *
